--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,36 +23,41 @@
 
   /* gradient */
 
-  --bg-gradient-onyx: linear-gradient(
-    to bottom right, 
-    hsl(240, 1%, 25%) 3%, 
-    hsl(0, 0%, 19%) 97%
-  );
-  --bg-gradient-jet: linear-gradient(
-    to bottom right, 
-    hsla(240, 1%, 18%, 0.251) 0%, 
-    hsla(240, 2%, 11%, 0) 100%
-  ), hsl(240, 2%, 13%);
-  --bg-gradient-yellow-1: linear-gradient(
-    to bottom right, 
-    hsl(45, 100%, 71%) 0%, 
-    hsla(36, 100%, 69%, 0) 50%
-  );
-  --bg-gradient-yellow-2: linear-gradient(
-    135deg, 
-    hsla(45, 100%, 71%, 0.251) 0%, 
-    hsla(35, 100%, 68%, 0) 59.86%
-  ), hsl(240, 2%, 13%);
-  --border-gradient-onyx: linear-gradient(
-    to bottom right, 
-    hsl(0, 0%, 25%) 0%, 
-    hsla(0, 0%, 25%, 0) 50%
-  );
-  --text-gradient-yellow: linear-gradient(
-    to right, 
-    hsl(45, 100%, 72%), 
-    hsl(35, 100%, 68%)
-  );
+--bg-gradient-onyx: linear-gradient(
+  to bottom right, 
+  hsl(240, 1%, 25%) 3%, 
+  hsl(0, 0%, 19%) 97%
+);
+
+--bg-gradient-jet: linear-gradient(
+  to bottom right, 
+  hsla(240, 1%, 18%, 0.251) 0%, 
+  hsla(240, 2%, 11%, 0) 100%
+), hsl(240, 2%, 13%);
+
+--bg-gradient-yellow-1: linear-gradient(
+  to bottom right, 
+  hsl(240, 100%, 50%) 0%,  /* Dark blue */
+  hsla(240, 100%, 50%, 0) 50%  /* Transparent dark blue */
+);
+
+--bg-gradient-yellow-2: linear-gradient(
+  135deg, 
+  hsla(240, 100%, 50%, 0.251) 0%,  /* Semi-transparent dark blue */
+  hsla(240, 100%, 50%, 0) 59.86%   /* Transparent dark blue */
+), hsl(240, 2%, 13%);
+
+--border-gradient-onyx: linear-gradient(
+  to bottom right, 
+  hsl(0, 0%, 25%) 0%, 
+  hsla(0, 0%, 25%, 0) 50%
+);
+
+--text-gradient-yellow: linear-gradient(
+  to right, 
+  hsl(240, 100%, 50%),  /* Dark blue */
+  hsl(240, 100%, 50%)   /* Dark blue */
+);
 
   /* solid */
 
