--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,8 +87,8 @@
   --smoky-black: hsl(0, 0%, 7%);
   --white-1: hsl(0, 0%, 100%);
   --white-2: hsl(0, 0%, 98%);
-  --orange-yellow-crayola: hsl(240, 100%, 50%);  /* Changed to dark blue */
-  --vegas-gold: hsl(240, 85%, 45%);              /* Softer blue for variety */
+  --orange-yellow-crayola: hsl(229, 76%, 31%);  /* Softer blue #1e3180 */
+  --vegas-gold: hsl(229, 66%, 61%);             /* Same softer blue */
   --light-gray: hsl(0, 0%, 84%);
   --light-gray-70: hsla(0, 0%, 84%, 0.7);
   --bittersweet-shimmer: hsl(0, 43%, 51%);
