--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1889,14 +1889,20 @@ textarea.form-input::-webkit-resizer { display: none; }
     display: inline-block; /* Makes it behave like a button */
     margin-left: 1rem; /* Spacing between the title and the button */
     padding: 0.5rem 1rem; /* Padding for the button */
-    background-color: #00adb5; /* Button background color */
-    color: white; /* Button text color */
-    text-decoration: none; /* Remove underline */
-    border-radius: 5px; /* Rounded corners */
+    background: var(--border-gradient-onyx); /* Button background color */
+    width: 30px;
+    height: 30px;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    color: var(--orange-yellow-crayola);
+    box-shadow: var(--shadow-1);
+    z-index: 1;
     transition: background-color 0.3s; /* Smooth transition for hover effect */
 }
 
 .resume-btn:hover {
     background-color: #008f92; /* Darker shade on hover */
 }
-
