--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1897,7 +1897,7 @@ textarea.form-input::-webkit-resizer { display: none; }
     justify-content: center;
     align-items: center;
     font-size: 16px;
-    color: var(--orange-yellow-crayola);
+    color: var(--white-1);
     box-shadow: var(--shadow-1);
     z-index: 1;
     transition: background-color 0.3s; /* Smooth transition for hover effect */
