--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1887,7 +1887,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
 .resume-btn {
     position: relative;
-    background: hsla(240, 1%, 17%, 0.75)
+    background: hsla(240, 1%, 17%, 0.75);
     padding: 20px;
     border-radius: 14px;
     box-shadow: var(--shadow-2);
