--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -848,6 +848,7 @@ main {
 .skill .title-wrapper {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 5px;
   margin-bottom: 8px;
 }
