--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,6 +210,10 @@ article {
   z-index: -1;
 }
 
+ion-icon {
+  color: blue;
+}
+
 .icon-box ion-icon { --ionicon-stroke-width: 35px; }
 
 article { display: none; }
