--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,8 +217,8 @@ article {
 }
 
 .doing-box ion-icon {
-  color: aqua;                /* Set the icon color to aqua */
-  font-size: 0.75in;          /* Set the size to approximately 0.75 inches */
+  color: var(--bg-gradient-yellow-2);                /* Set the icon color to aqua */
+  font-size: 0.60in;          /* Set the size to approximately 0.75 inches */
   vertical-align: middle;     /* Align the icon vertically with text */
   display: inline-block;      /* Keep the icon inline with the text */
   margin-right: 10px;         /* Optional: add some spacing between the icon and text */
